# odri_gz_ros2_control

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  flake.nix  gz_hardware_odri_plugins.xml  package.nix  package.xml
.github/workflows/: ci-pre-commit.yml  ci_ros2.yml  nix.yml  ros-rolling-ci.yml  update-flake-lock.yml
include/gz_ros2_control/: gz_ros2_control_plugin.hpp  gz_system.hpp  gz_system_interface.hpp
include/odri_gz_ros2_control/: gz_ros2_control_plugin.hpp  gz_system.hpp  gz_system_interface.hpp
src/: gz_ros2_control_plugin.cpp  gz_system.cpp
test/: test_odri_gz_system.cpp
