<?xml version="1.0"?>
<package format="3">
  <name>odri_gz_ros2_control</name>
  <version>1.2.2</version>
  <description>Gazebo ros2_control package allows to control simulated robots using ros2_control framework (ODRI fork).</description>
  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>
  <author>Olivier Stasse</author>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_sim_vendor</depend>
  <depend>gz_plugin_vendor</depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>ros2_control_cmake</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
